--- a/css/style-index.css
+++ b/css/style-index.css
@@ -79,8 +79,9 @@ body {
     color: white;
 }
 
-/* Body content here */
+/* Exclusive Page Content here */
 
+/* About company content here */
 
 .about-company {
     margin-left: 1%;
