--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,15 +1,48 @@
 html {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
-    
+
 }
 
 body {
     background-color: #f1faff;
     margin-top: 10%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
-    @media (max-width: 800px) {
+
+    @media (max-width: 1000px) {
         margin-top: 30%;
     }
+}
+
+#myBtn {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Fixed/sticky position */
+    bottom: 10px;
+    /* Place the button at the bottom of the page */
+    right: 20px;
+    /* Place the button 30px from the right */
+    z-index: 99;
+    /* Make sure it does not overlap */
+    border: none;
+    /* Remove borders */
+    outline: none;
+    /* Remove outline */
+    background-color: rgba(85, 76, 76, 0.511);
+    /* Set a background color */
+    color: white;
+    /* Text color */
+    cursor: pointer;
+    /* Add a mouse pointer on hover */
+    padding: 5px;
+    /* Some padding */
+    border-radius: 10px;
+    /* Rounded corners */
+}
+
+#myBtn:hover {
+    background-color: rgb(245, 241, 241);
+    /* Add a dark-grey background on hover */
 }
 
 .icons-img {
@@ -97,8 +130,9 @@ body {
     /* height: 70vh; */
 }
 
-.carousel-control-prev-icon, .carousel-control-next-icon {
-    background-color: rgb(24,56,112);
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: rgb(24, 56, 112);
     padding: 1%;
 }
 
@@ -111,11 +145,12 @@ body {
     from {
         transform: translateX(0);
     }
+
     to {
         transform: translateX(-100%);
     }
 }
-  
+
 .logos {
     overflow: hidden;
     padding: 7.5vh 0;
@@ -167,7 +202,7 @@ body {
     grid-template-columns: 14vw 4vw;
     grid-template-rows: 60vh 7.5vh 7.5vh;
     justify-content: center;
-    background-color: rgb(24,56,112);
+    background-color: rgb(24, 56, 112);
     width: 30vw;
     margin: auto;
 }
@@ -193,26 +228,32 @@ body {
     height: 12.5vh;
 }
 
-@media (max-width: 800px) {
-    .grid-container { 
-      width: 80vw; 
-    } 
-    .review { 
-      width: 70vw; 
-      margin-top: 2vh; 
-    } 
-    .name { 
-      width: 45vw; 
-    } 
-    .photo { 
-      width: 20vw; 
-      grid-column: 3; /* Important: Allow automatic placement */
-      grid-row: 2 / span 2;    /* Important: Allow automatic placement */
-      margin: 0;         /* Optional: Reset any default margins */
-      margin-left: 32vw;
-    } 
-  } 
-  
+@media (max-width: 1000px) {
+    .grid-container {
+        width: 80vw;
+    }
+
+    .review {
+        width: 70vw;
+        margin-top: 2vh;
+    }
+
+    .name {
+        width: 45vw;
+    }
+
+    .photo {
+        width: 20vw;
+        grid-column: 3;
+        /* Important: Allow automatic placement */
+        grid-row: 2 / span 2;
+        /* Important: Allow automatic placement */
+        margin: 0;
+        /* Optional: Reset any default margins */
+        margin-left: 32vw;
+    }
+}
+
 
 /* Founders content and boxes */
 .founders-content {
@@ -221,19 +262,23 @@ body {
 
 .overlay-box {
     position: relative;
-    width: 30vw; /* Set the width of your box */
-    height: 70vh; /* Set the height of your box */
-    margin: 5vh auto; /* Adjust margin as needed */
+    width: 30vw;
+    /* Set the width of your box */
+    height: 70vh;
+    /* Set the height of your box */
+    margin: 5vh auto;
+    /* Adjust margin as needed */
     overflow: hidden;
-  }
-  
-  .overlay-box img {
-    width: 100%;  
+}
+
+.overlay-box img {
+    width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensure the image covers the entire box */
-  }
-  
-  .overlay-content {
+    object-fit: cover;
+    /* Ensure the image covers the entire box */
+}
+
+.overlay-content {
     position: absolute;
     top: 0;
     left: 0;
@@ -243,27 +288,33 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #fff; /* Text color */
+    color: #fff;
+    /* Text color */
     text-align: center;
-    background: rgba(0, 0, 0, 0.7); /* Background color with opacity */
-    transition: background 0.7s ease-in-out; /* Smooth transition for the background */
-    opacity: 0; /* Initially hide the content */
-  }
+    background: rgba(0, 0, 0, 0.7);
+    /* Background color with opacity */
+    transition: background 0.7s ease-in-out;
+    /* Smooth transition for the background */
+    opacity: 0;
+    /* Initially hide the content */
+}
 
-  .founder-written {
+.founder-written {
     padding: 10%;
     font-size: small;
-  }
-  
-  .overlay-content h2,
-  .overlay-content p {
+}
+
+.overlay-content h2,
+.overlay-content p {
     margin: 0;
-  }
-  
-  .overlay-box:hover .overlay-content {
-    opacity: 1; /* Show the content on hover */
-    background: rgba(0, 0, 0, 0.6); /* Adjust the background color on hover */
-  }
+}
+
+.overlay-box:hover .overlay-content {
+    opacity: 1;
+    /* Show the content on hover */
+    background: rgba(0, 0, 0, 0.6);
+    /* Adjust the background color on hover */
+}
 
 .founder-data {
     display: flex;
@@ -278,11 +329,12 @@ body {
 .founder-icons {
     text-align: center;
 }
-  
-@media (max-width: 800px) {
+
+@media (max-width: 1000px) {
     .founders-content {
         flex-direction: column;
     }
+
     .overlay-box {
         width: 80vw;
     }
@@ -307,7 +359,7 @@ body {
 
 .footer a:hover {
     text-decoration: none;
-    color: rgba(0,0,0,0.75) !important;
+    color: rgba(0, 0, 0, 0.75) !important;
     transition-duration: 0.5s;
 }
 
